# covid-django

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
covid_19_app/: admin.py  apps.py  models.py  urls.py  views.py
covid_19_app/migrations/: 0001_initial.py
covid_19_project/: asgi.py  settings.py  urls.py  wsgi.py
static/: main.js
static/js/: main.js
templates/: _base.html  allcounties.html  allcountries.html  deleterecord.html  home.html  myrecords.html
