[tool.poetry]
name = "covid-django"
version = "0.1.0"
description = ""
authors = ["BatoolBtoush <batoolbtoush98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.4"
djangorestframework = "^3.14.0"
Markdown = "^3.4.1"
django-filter = "^22.1"
requests = "^2.28.1"
django-bootstrap-v5 = "^1.0.11"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.12.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
